# inventario

./: .gitignore  README.md  io.github.nokse22.inventario.json  io.github.nokse22.inventario.json~  libadwaita.json  meson.build
.github/workflows/: flatpak.yml  main.yml
data/: io.github.nokse22.inventario.appdata.xml.in  io.github.nokse22.inventario.desktop.in  io.github.nokse22.inventario.gschema.xml  meson.build
data/icons/: meson.build
flatpak/: io.github.nokse22.inventario.Devel.json
po/: POTFILES  meson.build
src/: inventario.gresource.xml  inventario.in  main.py  meson.build  window.py
src/gtk/: help-overlay.ui
workflows/: build.yml
